# data-reloaded

./: CMakeLists.txt  labs.txt  main.cpp  person.txt
include/: algorithms.hpp  entity.hpp  id_generator.hpp  random_int_generator.hpp  random_selector.hpp
src/: entity.cpp  id_generator.cpp
